--- a/udagram-frontend/src/app/feed/feed-item/feed-item.component.html
+++ b/udagram-frontend/src/app/feed/feed-item/feed-item.component.html
@@ -1,4 +1,5 @@
 <ion-card class="photo-card" *ngIf="feedItem">
+  <!-- <p>URL: <span>{{feedItem.url}}</span></p> -->
   <ion-img [src]="feedItem.url"></ion-img>
   <ion-card-content>
     <p>{{feedItem.caption}}</p>
